// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ComponentProfile Snaps matches the snapshot when componentTitle is an empty string 1`] = `<DocumentFragment />`;

exports[`ComponentProfile Snaps matches the snapshot when componentTitle is undefined 1`] = `<DocumentFragment />`;

exports[`ComponentProfile Snaps matches the snapshot with a title 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="root"
    >
      <div
        class="signal"
      />
      <div
        class="titleContainer"
      >
        <h2
          class="title"
        >
          Test Title
        </h2>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentProfile Snaps matches the snapshot with a title link 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <a
      href="/test-link"
    >
      <div
        class="root"
      >
        <div
          class="signal"
        />
        <div
          class="titleContainer"
        >
          <h2
            class="title"
          >
            Test Title
          </h2>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
